Bug 218675 ipcService::~ipcService() ASSERTION: no xpcom-shutdown event??: 'mTransport == nsnull' is incorrect r=darin sr=darin